Tests/Negative/DuplicateFunctionDefinition.mr
fun foo() {}
fun foo() {} // Error: Redefinition of function 'foo'
